# datafun-04-notebooks

./: .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml
docs/: api.md  glossary.md  index.md  project-instructions.md  your-files.md
docs/module/: RESOURCES.md  seaborn-datasets.md
notebooks/: eda_blessing.ipynb  eda_case.ipynb
src/datafun/: app_blessing.py
tests/: test_app_case.py
